# SwallowNote

./: .gitignore  README.md  README.zh-CN.md  components.json  debug-plugin-load-perf.md  debug-wenyan-empty-themeid.md  eslint.config.js  index.html  package-lock.json  package.json  plugin-market-prototype.html  prototype-properties.html  release.sh  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.catpaw/rules/: iderule.md
.dbg/: trae-debug-log-plugin-click-slow.ndjson  trae-debug-log-plugin-page-slow.ndjson
.github/workflows/: release.yml
.lingma/rules/: writeCode.md
.qoder/rules/: code.md
.work/: SDD_系统设计文档.md  SRS_需求规格说明书.md  UIUX设计规范.md  vscode.md  临时文档.md  前端规范文档.md  布局设计.md  执行文档.md  规则.md  设计文档.md  问题.md  需求文档.beta.md  需求文档.md
designs/: plugin-atlas.html
docs/: README.md
docs/plugin-marketplace/: README.md  pubkey.b64  repo.json
docs/plugin-samples/: README.md
docs/plugin-sdk/: README.md  package-lock.json  package.json  tsconfig.json
docs/plugin-system/: DEVELOPER_GUIDE.md  README.md  backend.md  context-menu.md  events.md  lifecycle.md  manifest.md  quickstart.md  settings.md  standalone-development.md  storage.md
docs/plugin-template/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugins/: repo.json
plugins/export/: README.md  build.sh  manifest.json  package-lock.json  package.json  package.sh  tsconfig.json  vite.config.ts
plugins/export/src-tauri/: Cargo.toml
plugins/export/src-tauri/src/: convert.rs  docx_postprocess.rs  main.rs  math.rs
plugins/mindmap/: manifest.json  package-lock.json  package.json  package.sh  vite.config.ts
plugins/picgo/: README.md  manifest.json  package-lock.json  package.json  package.sh  settings.json  tsconfig.json  vite.config.ts
plugins/typist/: README.md  build.sh  manifest.json  package-lock.json  package.json  package.sh  vite.config.ts
plugins/typist/src-tauri/: Cargo.toml
plugins/typist/src-tauri/src/: convert.rs  highlight.rs  main.rs  themes.rs
plugins/wenyan/: build.sh  manifest.json  package-lock.json  package.json  package.sh  settings.json  tsconfig.json  vite.config.ts
plugins/wenyan/src-tauri/: Cargo.toml
plugins/wenyan/src-tauri/src/: gzh.rs  main.rs
src/: App.tsx  app.css  app.html  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: i18n.rs  lib.rs  main.rs
src-tauri/src/ai_proxy/: crypto.rs  handlers.rs  mod.rs  server.rs
src-tauri/src/commands/: ai.rs  ai_builtin_models.rs  ai_chat.rs  ai_role_prompts.rs  error.rs  file.rs  folder_history.rs  frontmatter.rs  git.rs  image_downloader.rs  market_sources.rs  mod.rs  plugin.rs  plugin_invoke.rs  plugin_settings.rs  session_state.rs  upgrade.rs
src-tauri/src/db/: ai_builtin_models.rs  ai_chat.rs  ai_role_prompts.rs  conflict_repo.rs  folder_history.rs  market_sources.rs  md_frontmatter.rs  mod.rs  plugin_settings.rs  session_state.rs
src-tauri/src/plugins/: file_watcher.rs  mac_rounded_corners.rs
src-tauri/src/services/: file_watcher.rs  frontmatter_index.rs  mod.rs
src/components/: ActivityBar.tsx  CommandPalette.tsx  Editor.tsx  EditorToolbar.tsx  ErrorBoundary.tsx  PanelContent.tsx  SearchPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  TitleBarRecentPopover.tsx  index.ts
src/hooks/: index.ts  useBlockResize.ts  useFileTreeActions.ts  useFileTreeDragDrop.ts  useKeyboardShortcuts.ts  usePluginTelemetryVersion.ts  useSessionPersistence.ts  useTheme.ts
src/i18n/: index.ts
src/lib/: ai.ts  api.ts  demoData.ts  download-coordinator.ts  editor-flush.ts  plugin-auto-update.ts  plugin-commands.ts  plugin-conflicts.ts  plugin-dependencies.ts  plugin-diagnostics.ts  plugin-health.ts  plugin-hmr.ts  plugin-hooks.ts  plugin-host-takeover.ts  plugin-host.ts  plugin-loader.ts  plugin-market.ts  plugin-menu.ts  plugin-permission-guard.ts  plugin-permissions.ts  plugin-telemetry.ts  plugin-utils.tsx  shortcuts.ts  tauri.ts  utils.ts
src/routes/: +page.svelte
src/stores/: category.ts  clone.ts  editor.ts  editorSettings.ts  filetree.ts  git.ts  index.ts  plugin-market.ts  plugin.ts  pluginEditor.ts  ui.ts  workspace.ts
src/types/: plugin.ts  simple-mind-map.d.ts
src/utils/: compact-markdown.ts  tableOfContents.ts
test/: setup.ts
test/ai/: ai-chat-api.test.ts  ai-context.test.ts  ai-role-prompts.test.ts  ai-utils.test.ts  test-report.md
test/editor/: editor-store.test.ts  editor-utils.test.ts  test-report.md
test/file-management/: file-create.test.ts  file-delete.test.ts  file-drag-drop.test.ts  file-rename.test.ts  file-tree.test.ts  test-report.md
test/git/: git-store.test.ts  test-report.md
test/plugin/: keyboard-shortcut-plugin-conflict.test.ts  plugin-auto-update.test.ts  plugin-dependencies.test.ts  plugin-editor-registry-onload.test.ts  plugin-editor-registry-toggle.test.ts  plugin-editor-tab-toggle.test.ts  plugin-host-bus-render.test.ts  plugin-wave-b.test.ts  (+14 more)
(+274 files in other folders)
