[package]
name = "swallownote"
version = "0.1.0"
description = "A Markdown note-taking application"
authors = ["SwallowNote Team"]
edition = "2021"

[lib]
name = "swallownote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8.2"
notify-debouncer-full = "0.7"
uuid = { version = "1.0", features = ["v4"] }
grep-searcher = "0.1"
grep = "0.1"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "6"
futures = "0.3"
once_cell = "1"
base64 = "0.22"
chrono = "0.4"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
aes-gcm = "0.10"
sha2 = "0.10"
tokio-stream = "0.1"
jwalk = "0.8"
keyring = "3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }
winreg = "0.52"
