[package]
name = "swallownote-plugin-typist"
version = "0.1.1"
description = "SwallowNote typist plugin backend — Markdown to platform-themed HTML"
authors = ["SwallowNote"]
edition = "2021"

[[bin]]
name = "plugin_com_swallownote_typist"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.12"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
