[package]
name = "swallownote-plugin-wenyan"
version = "0.1.4"
description = "SwallowNote wenyan plugin backend — push article draft to WeChat Official Account"
authors = ["SwallowNote"]
edition = "2021"

[[bin]]
name = "plugin_com_swallownote_wenyan"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
